feat: improvement api interface and add isr(base on nextjs incremental static regeneration) through guc(go concurrency) package
