# backend/docs/swagger.yaml
@@ -1,4 +1,13 @@
 definitions:
+  credential.AlternateArticle:
+    properties:
+      article:
+        $ref: '#/definitions/domain.Article'
+      next:
+        $ref: '#/definitions/domain.Article'
+      pre:
+        $ref: '#/definitions/domain.Article'
+    type: object
   credential.CategoryCredential:
     properties:
       name:
@@ -27,6 +36,86 @@ definitions:
         type: string
       user: {}
       version:
+        type: string
+    type: object
+  credential.PublicArticle:
+    properties:
+      category:
+        type: string
+      content:
+        type: string
+      createdAt:
+        type: string
+      id:
+        type: integer
+      tags:
+        items:
+          type: string
+        type: array
+      title:
+        type: string
+      top:
+        type: integer
+      updatedAt:
+        type: string
+    type: object
+  credential.SiteMeta:
+    properties:
+      layoutSetting:
+        $ref: '#/definitions/domain.LayoutSetting'
+      menus:
+        items:
+          $ref: '#/definitions/domain.MenuItem'
+        type: array
+      meta:
+        properties:
+          about:
+            $ref: '#/definitions/domain.About'
+          categories:
+            items:
+              $ref: '#/definitions/domain.Category'
+            type: array
+          id:
+            type: integer
+          links:
+            items:
+              $ref: '#/definitions/domain.LinkItem'
+            type: array
+          menus:
+            items:
+              $ref: '#/definitions/domain.MenuItem'
+            type: array
+          rewards:
+            items:
+              $ref: '#/definitions/domain.RewardItem'
+            type: array
+          siteInfo:
+            $ref: '#/definitions/domain.SiteInfo'
+          socials:
+            items:
+              $ref: '#/definitions/domain.SocialItem'
+            type: array
+          totalWordCount:
+            type: integer
+          viewer:
+            type: integer
+          visited:
+            type: integer
+        type: object
+      tags:
+        items:
+          type: string
+        type: array
+      totalArticles:
+        type: integer
+      totalWords:
+        type: integer
+      version:
+        type: string
+    type: object
+  credential.TokenCredential:
+    properties:
+      name:
         type: string
     type: object
   domain.About:
@@ -110,6 +199,28 @@ definitions:
     x-enum-varnames:
     - CategoryCategoryType
     - ColumnCategoryType
+  domain.CustomPage:
+    properties:
+      createdAt:
+        type: string
+      html:
+        type: string
+      name:
+        type: string
+      path:
+        type: string
+      type:
+        type: string
+      updatedAt:
+        type: string
+    type: object
+  domain.DataViewer:
+    properties:
+      viewer:
+        type: integer
+      visited:
+        type: integer
+    type: object
   domain.Draft:
     properties:
       author:
@@ -378,6 +489,23 @@ definitions:
     - AutoTheme
     - DarkTheme
     - LightTheme
+  domain.Token:
+    properties:
+      createdAt:
+        type: string
+      disabled:
+        type: boolean
+      expiresIn:
+        type: integer
+      id:
+        type: integer
+      name:
+        type: string
+      token:
+        type: string
+      userId:
+        type: integer
+    type: object
   domain.TrueOrFalse:
     enum:
     - "true"
@@ -406,6 +534,23 @@ definitions:
         type: string
       type:
         type: string
+    type: object
+  domain.Visit:
+    properties:
+      createdAt:
+        type: string
+      date:
+        type: string
+      id:
+        type: integer
+      lastVisitedTime:
+        type: string
+      pathname:
+        type: string
+      viewer:
+        type: integer
+      visited:
+        type: integer
     type: object
   domain.WalineSetting:
     properties:
@@ -1635,6 +1780,127 @@ paths:
       summary: save or update waline setting
       tags:
       - Setting
+  /api/admin/tag/:name:
+    delete:
+      consumes:
+      - application/json
+      description: delete articles tags by tag name
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: boolean
+      summary: delete articles tags by tag name
+      tags:
+      - Tag
+    get:
+      consumes:
+      - application/json
+      description: get articles by tag name
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/domain.Article'
+            type: array
+      summary: get articles by tag name
+      tags:
+      - Tag
+    put:
+      consumes:
+      - application/json
+      description: update articles by tag name
+      parameters:
+      - description: value
+        in: path
+        name: value
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: boolean
+      summary: update articles tags by tag name
+      tags:
+      - Tag
+  /api/admin/tag/all:
+    get:
+      consumes:
+      - application/json
+      description: get all tags
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              type: string
+            type: array
+      summary: get all tags
+      tags:
+      - Tag
+  /api/admin/token:
+    get:
+      consumes:
+      - application/json
+      description: get all tokens
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/domain.Token'
+            type: array
+      summary: get all tokens
+      tags:
+      - Token
+    post:
+      consumes:
+      - application/json
+      description: create token
+      parameters:
+      - description: tokenCredential
+        in: body
+        name: tokenCredential
+        required: true
+        schema:
+          $ref: '#/definitions/credential.TokenCredential'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: string
+      summary: create token
+      tags:
+      - Token
+  /api/admin/token/:id:
+    delete:
+      consumes:
+      - application/json
+      description: delete token by id
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: boolean
+      summary: delete token by id
+      tags:
+      - Token
   /api/admin/user/list:
     get:
       consumes:
@@ -1650,4 +1916,274 @@ paths:
       summary: 获取用户列表
       tags:
       - User
+  /api/public/article:
+    get:
+      consumes:
+      - application/json
+      description: from option obtain articles
+      parameters:
+      - description: page
+        in: query
+        name: page
+        type: integer
+      - description: pageSize
+        in: query
+        name: pageSize
+        type: integer
+      - description: toListView
+        in: query
+        name: toListView
+        type: boolean
+      - description: category
+        in: query
+        name: category
+        type: string
+      - description: page
+        in: query
+        name: tags
+        type: string
+      - description: title
+        in: query
+        name: title
+        type: integer
+      - description: sortCreateAt
+        in: query
+        name: sortCreateAt
+        type: integer
+      - description: sortTop
+        in: query
+        name: sortTop
+        type: integer
+      - description: sortViewer
+        in: query
+        name: sortViewer
+        type: integer
+      - description: startTime
+        in: query
+        name: startTime
+        type: integer
+      - description: endTime
+        in: query
+        name: endTime
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/domain.ArticlePageResult'
+      summary: 根据参数获取文章
+      tags:
+      - Public
+  /api/public/article/:id:
+    post:
+      consumes:
+      - application/json
+      description: get article by id or pathname
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/domain.Article'
+      summary: get article by id or pathname
+      tags:
+      - Public
+  /api/public/article/viewer/:id:
+    get:
+      consumes:
+      - application/json
+      description: get Visit by article id or pathname
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/domain.Visit'
+      summary: get Visit by article id or pathname
+      tags:
+      - Public
+  /api/public/category:
+    get:
+      consumes:
+      - application/json
+      description: get articles by category
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: object
+      summary: get articles by category
+      tags:
+      - Public
+  /api/public/customPage:
+    get:
+      consumes:
+      - application/json
+      description: get custom page
+      parameters:
+      - description: path
+        in: path
+        name: path
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/domain.CustomPage'
+      summary: get custom page
+      tags:
+      - Public
+  /api/public/customPage/all:
+    get:
+      consumes:
+      - application/json
+      description: get custom page
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/domain.CustomPage'
+            type: array
+      summary: get custom page
+      tags:
+      - Public
+  /api/public/meta:
+    get:
+      consumes:
+      - application/json
+      description: get site meta
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/credential.SiteMeta'
+      summary: get site meta
+      tags:
+      - Public
+  /api/public/search:
+    get:
+      consumes:
+      - application/json
+      description: get article by id or pathname
+      parameters:
+      - description: value
+        in: path
+        name: value
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/domain.Article'
+            type: array
+      summary: get article by id or pathname
+      tags:
+      - Public
+  /api/public/tag:
+    get:
+      consumes:
+      - application/json
+      description: get articles by tag
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: object
+      summary: get articles by tag
+      tags:
+      - Public
+  /api/public/tag/:name:
+    get:
+      consumes:
+      - application/json
+      description: get articles by tag name
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/credential.PublicArticle'
+            type: array
+      summary: get articles by tag name
+      tags:
+      - Public
+  /api/public/timeline:
+    get:
+      consumes:
+      - application/json
+      description: get timeline
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: object
+      summary: get timeline
+      tags:
+      - Public
+  /api/public/viewer:
+    get:
+      consumes:
+      - application/json
+      description: get system viewer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/domain.DataViewer'
+      summary: get system viewer
+      tags:
+      - Public
+    post:
+      consumes:
+      - application/json
+      description: add system viewer
+      parameters:
+      - description: isNew
+        in: path
+        name: isNew
+        required: true
+        type: boolean
+      - description: isNewByPath
+        in: path
+        name: isNewByPath
+        required: true
+        type: boolean
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/domain.Article'
+            type: array
+      summary: add system viewer
+      tags:
+      - Public
 swagger: "2.0"
