# backend/internal/app/router/about.go
@@ -3,6 +3,7 @@ package router
 import (
 	"cc.allio/fusion/config"
 	"cc.allio/fusion/internal/credential"
+	"cc.allio/fusion/internal/event"
 	"cc.allio/fusion/internal/svr"
 	"errors"
 	"github.com/gin-gonic/gin"
@@ -14,6 +15,7 @@ const AboutPathPrefix = "/api/admin/meta/about"
 type AboutRouter struct {
 	Cfg     *config.Config
 	MetaSvr *svr.MetaService
+	Isr     *event.IsrEventBus
 }
 
 var AboutRouterSet = wire.NewSet(wire.Struct(new(AboutRouter), "*"))
@@ -27,8 +29,8 @@ var AboutRouterSet = wire.NewSet(wire.Struct(new(AboutRouter), "*"))
 // @Produce json
 // @Success 200 {object} domain.Meta
 // @Router /api/admin/meta/about [Get]
-func (router *AboutRouter) GetAbout(c *gin.Context) *R {
-	meta := router.MetaSvr.GetMeta()
+func (a *AboutRouter) GetAbout(c *gin.Context) *R {
+	meta := a.MetaSvr.GetMeta()
 	return Ok(meta)
 }
 
@@ -42,8 +44,8 @@ func (router *AboutRouter) GetAbout(c *gin.Context) *R {
 // @Param        content   path      string  true  "content"
 // @Success 200 {object} bool
 // @Router /api/admin/meta/about [Put]
-func (router *AboutRouter) UpdateAbout(c *gin.Context) *R {
-	if router.Cfg.Demo {
+func (a *AboutRouter) UpdateAbout(c *gin.Context) *R {
+	if a.Cfg.Demo {
 		return InternalError(errors.New("演示站禁止修改此项！"))
 	}
 	var aboutCredential *credential.AboutCredential
@@ -51,11 +53,13 @@ func (router *AboutRouter) UpdateAbout(c *gin.Context) *R {
 	if err != nil {
 		return InternalError(err)
 	}
-	succeed := router.MetaSvr.UpdateAboutContent(aboutCredential.Content)
+	succeed := a.MetaSvr.UpdateAboutContent(aboutCredential.Content)
+
+	a.Isr.ActiveAbout("trigger about incremental by update about")
 	return Ok(succeed)
 }
 
-func (router *AboutRouter) Register(r *gin.Engine) {
-	r.GET(AboutPathPrefix, Handle(router.GetAbout))
-	r.PUT(AboutPathPrefix, Handle(router.UpdateAbout))
+func (a *AboutRouter) Register(r *gin.Engine) {
+	r.GET(AboutPathPrefix, Handle(a.GetAbout))
+	r.PUT(AboutPathPrefix, Handle(a.UpdateAbout))
 }
